--- a/management/static/registration.css
+++ b/management/static/registration.css
@@ -74,3 +74,9 @@
     text-align: center;
     margin-top: 100px;
 }
+
+.registration-link-to-login{
+    text-decoration: none;
+    font-family: 'Montserrat';
+    color: rgb(100, 100, 100);
+}
